--- a/01 HTML Y CSS/05 tienda/sass/main.scss
+++ b/01 HTML Y CSS/05 tienda/sass/main.scss
@@ -1,4 +1,4 @@
-header {
-    background-color: peru;
-    font-size: 80px;
-}
+@import "base/normalize";
+@import "base/base";
+
+@import "modules/nav";
