--- a/01 HTML Y CSS/05 tienda/sass/base/_base.scss
+++ b/01 HTML Y CSS/05 tienda/sass/base/_base.scss
@@ -1,3 +1,5 @@
+$font-khula: 'Khula', sans-serif;
+
 * {
     padding: 0;
     margin: 0;
@@ -20,6 +22,7 @@ html {
          
     */
     font-size: 62.5%;
+    font-family: $font-khula;
 }
 
 a {
