--- a/01 HTML Y CSS/05 tienda/css/estilos.css
+++ b/01 HTML Y CSS/05 tienda/css/estilos.css
@@ -327,6 +327,7 @@ html {
 
   */
   font-size: 62.5%;
+  font-family: "Khula", sans-serif;
 }
 
 a {
@@ -339,6 +340,32 @@ ul, ol {
 
 .nav__welcome {
   background-color: #f4f4f4;
+}
+.nav__welcome__container {
+  max-width: 120rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.4rem;
+  padding: 1rem 0;
+  align-items: center;
+}
+.nav__welcome__container--msj {
+  color: rgb(51, 51, 51);
+}
+.nav__welcome__container__access--account {
+  color: rgb(102, 102, 102);
+}
+.nav__welcome__container__access--account i {
+  margin-right: 0.5rem;
+}
+.nav__welcome__container__access select {
+  border: none;
+  outline: 0;
+  background-color: #f4f4f4;
+  color: rgb(102, 102, 102);
+  margin-left: 1rem;
 }
 
 /*# sourceMappingURL=estilos.css.map */
