--- a/01 HTML Y CSS/05 tienda/css/estilos.css
+++ b/01 HTML Y CSS/05 tienda/css/estilos.css
@@ -334,17 +334,25 @@ a {
   text-decoration: none;
 }
 
+a,
+span {
+  display: inline-block;
+}
+
 ul, ol {
   list-style: none;
+}
+
+.container {
+  max-width: 120rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .nav__welcome {
   background-color: #f4f4f4;
 }
 .nav__welcome__container {
-  max-width: 120rem;
-  margin-left: auto;
-  margin-right: auto;
   display: flex;
   justify-content: space-between;
   font-size: 1.4rem;
@@ -366,6 +374,28 @@ ul, ol {
   background-color: #f4f4f4;
   color: rgb(102, 102, 102);
   margin-left: 1rem;
+}
+.nav__menu__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.nav__menu__container__right {
+  display: flex;
+  align-items: center;
+}
+.nav__menu__container__right__box {
+  display: flex;
+}
+.nav__menu__container__right__box__item {
+  margin-left: 1rem;
+}
+.nav__menu__container__right__box__item--link {
+  color: rgb(51, 51, 51);
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 1.1rem 1.5rem 0.5rem 1.5rem;
 }
 
 /*# sourceMappingURL=estilos.css.map */
