--- a/01 HTML Y CSS/05 tienda/sass/modules/_nav.scss
+++ b/01 HTML Y CSS/05 tienda/sass/modules/_nav.scss
@@ -2,9 +2,6 @@
     &__welcome {
         background-color: #f4f4f4;
         &__container {
-            max-width: 120rem;
-            margin-left: auto;
-            margin-right: auto;
             display: flex;
             justify-content: space-between;
             font-size: 1.4rem;
@@ -26,6 +23,31 @@
                     background-color: #f4f4f4;
                     color: rgb(102, 102, 102 );
                     margin-left: 1rem;
+                }
+            }
+        }
+    }
+    &__menu {
+        &__container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            &__right {
+                display: flex;
+                align-items: center;
+                &__box {
+                    display: flex;
+                    &__item {
+                        margin-left: 1rem;
+                        &--link {
+                            color: rgb(51,51,51);
+                            font-size: 1.5rem;
+                            text-transform: uppercase;
+                            font-weight: 700;
+                            // border: .1rem solid;
+                            padding: 1.1rem 1.5rem .5rem 1.5rem;
+                        }
+                    }
                 }
             }
         }
