--- a/01 HTML Y CSS/05 tienda/css/estilos.css
+++ b/01 HTML Y CSS/05 tienda/css/estilos.css
@@ -397,5 +397,40 @@ ul, ol {
   font-weight: 700;
   padding: 1.1rem 1.5rem 0.5rem 1.5rem;
 }
+.nav__menu__container__right__cart {
+  background-color: rgb(0, 132, 197);
+  color: white;
+  padding: 1rem 3rem;
+  text-align: center;
+}
+.nav__menu__container__right__cart__box {
+  position: relative;
+}
+.nav__menu__container__right__cart__box i {
+  font-size: 2.5rem;
+}
+.nav__menu__container__right__cart__box span {
+  width: 2.5rem;
+  height: 2.5rem;
+  background-color: rgb(51, 51, 51);
+  font-size: 1.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-weight: 700;
+  padding-top: 0.35rem;
+  position: absolute;
+  top: -0.6rem;
+  right: -1.2rem;
+}
+.nav__menu__container__right__cart--title {
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+}
+.nav__menu__container__right__cart--title, .nav__menu__container__right__cart--price {
+  font-size: 1.6rem;
+  font-weight: 700;
+}
 
 /*# sourceMappingURL=estilos.css.map */
