--- a/01 HTML Y CSS/05 tienda/sass/modules/_nav.scss
+++ b/01 HTML Y CSS/05 tienda/sass/modules/_nav.scss
@@ -88,5 +88,63 @@
             }
         }
     }
+    &__search {
+        background-color: $color-secondary;
+        &__container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            &__category {
+                background-color: $color-primary;
+                color: white;
+                font-size: 1.4rem;
+                text-transform: uppercase;
+                padding: 1.9rem 2rem;
+                font-weight: 600;
+                span {
+                    margin: 0 2rem 0 1rem;
+                }
+            }
+            &__formBox {
+                form {
+                    display: flex;
+                    font-size: 1.3rem;
+                    background-color: white;
+                    align-items: center;
+                    padding-right: 2rem;
+                    border-radius: .5rem;
+                    overflow: hidden;
+                    input,
+                    select {
+                        border: none;
+                        outline: 0;
+                        padding: 1.5rem 2rem 1rem 2rem;
+                    }
+                    input {
+                        border-right: 1px solid rgba(0,0,0,.2);
+                        width: 40rem;
+                        // border-radius: .5rem 0 0 .5rem;
+                    }
+                    select{
+                        color: rgb(136,136,136);
+                        appearance: none;
+                    }
+                    i{
+                        color: rgb(136,136,136);
+                    }
+                    
+                }
+            }
+            &__phone {
+                font-size: 1.6rem;
+                i {
+                    color: $color-primary;
+                }
+                span {
+                    color: white;
+                }
+            }
+        }
+    }
 }
 
