--- a/01 HTML Y CSS/05 tienda/css/estilos.css
+++ b/01 HTML Y CSS/05 tienda/css/estilos.css
@@ -307,6 +307,15 @@ template {
   display: none;
 }
 
+/*
+    EM
+    992px / 16px = 62em
+    768px / 16px = 48em
+    576px / 16px = 36em
+    420px
+    380px
+
+*/
 * {
   padding: 0;
   margin: 0;
@@ -592,16 +601,118 @@ ul, ol {
   width: 25%;
 }
 
+.cards {
+  padding: 5rem 0;
+}
 .cards__container {
   display: flex;
   column-gap: 3rem;
   flex-wrap: wrap;
 }
 .cards__container__item {
-  background-color: peru;
-  border: 1px solid;
-  height: 10rem;
+  background-color: rgb(244, 244, 244);
+  border: 2px solid #e5e5e5;
   width: calc(25% - 2.25rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3rem 0;
+}
+.cards__container__item i {
+  color: rgb(0, 132, 197);
+  font-size: 3rem;
+}
+.cards__container__item--titulo {
+  font-size: 2rem;
+  font-weight: 700;
+  color: rgb(51, 51, 51);
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+.cards__container__item--descri {
+  font-size: 1.4rem;
+  color: rgb(51, 51, 51);
+}
+
+.productos {
+  padding-bottom: 5rem;
+}
+.productos__container__categorias {
+  font-size: 2.4rem;
+  text-transform: uppercase;
+  padding-bottom: 1.5rem;
+  border-bottom: 2px solid rgb(229, 229, 229);
+}
+.productos__container__categorias--link {
+  color: rgb(51, 51, 51);
+}
+.productos__container__categorias--link.active {
+  font-weight: 700;
+}
+.productos__container__box {
+  margin-top: 3rem;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 5rem;
+  justify-content: center;
+}
+.productos__container__box__item {
+  width: 25%;
+  padding: 0 2rem;
+  text-align: center;
+}
+.productos__container__box__item__top {
+  display: flex;
+  justify-content: space-between;
+}
+.productos__container__box__item__top span {
+  background-color: rgb(0, 132, 197);
+  font-size: 1.4rem;
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 0.3rem;
+}
+.productos__container__box__item img {
+  width: 100%;
+  display: block;
+}
+.productos__container__box__item h2 {
+  font-size: 1.6rem;
+  color: rgb(51, 51, 51);
+  margin-bottom: 1.5rem;
+}
+.productos__container__box__item__stars {
+  color: rgb(51, 51, 51);
+}
+.productos__container__box__item__precio {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+.productos__container__box__item__precio--real {
+  font-size: 1.6rem;
+  color: rgb(102, 102, 102);
+  text-decoration: line-through;
+}
+.productos__container__box__item__precio--oferta {
+  font-size: 2rem;
+  color: rgb(234, 58, 60);
+  font-weight: 700;
+  margin-left: 0.5rem;
+}
+.productos__container__box__item--btn {
+  border: 1px solid rgb(229, 229, 229);
+  font-size: 1.4rem;
+  color: rgb(51, 51, 51);
+  text-transform: uppercase;
+  padding: 1rem 2rem;
+  border-radius: 0.3rem;
+  transition: all 0.3s;
+}
+.productos__container__box__item--btn:hover {
+  background-color: rgb(0, 132, 197);
+  border-color: rgb(0, 132, 197);
+  color: white;
+  transition: all 0.3s;
 }
 
 /*# sourceMappingURL=estilos.css.map */
