--- a/01 HTML Y CSS/05 tienda/sass/base/_base.scss
+++ b/01 HTML Y CSS/05 tienda/sass/base/_base.scss
@@ -2,6 +2,7 @@ $font-khula: 'Khula', sans-serif;
 
 /*
     EM
+    1200px / 16px = 75em
     992px / 16px = 62em
     768px / 16px = 48em
     576px / 16px = 36em
@@ -9,7 +10,7 @@ $font-khula: 'Khula', sans-serif;
     380px
 
 */
-
+$bp-extraLarge: 75em;
 $bp-large: 62em;
 $bp-medium: 48em;
 $bp-small: 36em;
@@ -37,6 +38,9 @@ html {
     */
     font-size: 62.5%;
     font-family: $font-khula;
+    @media only screen and (max-width: $bp-small){
+        font-size: 50%;
+    }
 }
 
 a {
