--- a/01 HTML Y CSS/05 tienda/sass/modules/_cards.scss
+++ b/01 HTML Y CSS/05 tienda/sass/modules/_cards.scss
@@ -3,6 +3,7 @@
     &__container {
         display: flex;
         column-gap: 3rem;
+        row-gap: 3rem;
         flex-wrap: wrap;
         &__item {
             background-color: rgb(244, 244, 244);
@@ -12,6 +13,12 @@
             flex-direction: column;
             align-items: center;
             padding: 3rem 0;
+            @media only screen and (max-width: $bp-large){
+                width: calc(50% - 1.5rem);
+            }
+            @media only screen and (max-width: $bp-small){
+                width: 100%;
+            }
             i {
                 color: $color-primary;
                 font-size: 3rem;
