--- a/01 HTML Y CSS/05 tienda/sass/modules/_nav.scss
+++ b/01 HTML Y CSS/05 tienda/sass/modules/_nav.scss
@@ -32,11 +32,28 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            img {
+                width: 12rem;
+            }
+            &--iconMenu{
+                font-size: 1.8rem;
+                color: $color-secondary;
+                border: 1px solid $color-secondary;
+                padding: 1rem 1.5rem .5rem 1.5rem;
+                border-radius: .5rem;
+                display: none;
+                @media only screen and (max-width: $bp-large){
+                    display: block;
+                }
+            }
             &__right {
                 display: flex;
                 align-items: center;
                 &__box {
                     display: flex;
+                    @media only screen and (max-width: $bp-large){
+                        display: none;
+                    }
                     &__item {
                         margin-left: 1rem;
                         &--link {
@@ -94,6 +111,9 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            @media only screen and (max-width: $bp-large){
+                justify-content: center;
+            }
             &__category {
                 background-color: $color-primary;
                 color: white;
@@ -106,6 +126,10 @@
                 }
             }
             &__formBox {
+                width: 53%;
+                @media only screen and (max-width: $bp-large){
+                    display: none;
+                }
                 form {
                     display: flex;
                     font-size: 1.3rem;
@@ -137,6 +161,9 @@
             }
             &__phone {
                 font-size: 1.6rem;
+                @media only screen and (max-width: $bp-large){
+                    display: none;
+                }
                 i {
                     color: $color-primary;
                 }
