--- a/01 HTML Y CSS/05 tienda/sass/modules/_productos.scss
+++ b/01 HTML Y CSS/05 tienda/sass/modules/_productos.scss
@@ -6,8 +6,20 @@
             text-transform: uppercase;
             padding-bottom: 1.5rem;
             border-bottom: 2px solid rgb(229, 229, 229);
+            @media only screen and (max-width: $bp-medium){
+                font-size: 1.6rem;
+            }
+            @media only screen and (max-width: $bp-small){
+                display: flex;
+                flex-wrap: wrap;
+                column-gap: 3rem;
+                row-gap: 2rem;
+            }
             &--link {
                 color: $color-secondary;
+                @media only screen and (max-width: $bp-small){
+                    margin: 0;
+                }
                 &.active{
                     font-weight: 700;
                 }
@@ -23,6 +35,15 @@
                 width: 25%;
                 padding: 0 2rem;
                 text-align: center;
+                @media only screen and (max-width: $bp-large){
+                    width: calc(100% / 3);
+                }
+                @media only screen and (max-width: $bp-medium){
+                    width: 50%;
+                }
+                @media only screen and (max-width: $bp-small){
+                    width: 100%;
+                }
                 &__top {
                     display: flex;
                     justify-content: space-between;
