--- a/01 HTML Y CSS/05 tienda/css/estilos.css
+++ b/01 HTML Y CSS/05 tienda/css/estilos.css
@@ -425,6 +425,11 @@ ul, ol {
   margin-left: 10rem;
 }
 
+.nav {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+}
 .nav__welcome {
   background-color: #f4f4f4;
 }
@@ -451,6 +456,9 @@ ul, ol {
   color: rgb(102, 102, 102);
   margin-left: 1rem;
 }
+.nav__menu {
+  background-color: white;
+}
 .nav__menu__container {
   display: flex;
   align-items: center;
@@ -470,6 +478,8 @@ ul, ol {
 @media only screen and (max-width: 62em) {
   .nav__menu__container--iconMenu {
     display: block;
+    z-index: 2;
+    background-color: white;
   }
 }
 .nav__menu__container__right {
@@ -481,7 +491,26 @@ ul, ol {
 }
 @media only screen and (max-width: 62em) {
   .nav__menu__container__right__box {
-    display: none;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.95);
+    left: -100%;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 1rem;
+    z-index: 1;
+    transition: all 0.3s;
+  }
+  .nav__menu__container__right__box.mostrar {
+    left: 0;
+    transition: all 0.3s;
+  }
+  .nav__menu__container__right__box__item--link {
+    color: white !important;
+    font-size: 2.8rem !important;
   }
 }
 .nav__menu__container__right__box__item {
@@ -602,6 +631,9 @@ ul, ol {
   color: white;
 }
 
+.portada {
+  padding-top: 19.738rem;
+}
 .portada__top {
   position: relative;
 }
