--- a/01 HTML Y CSS/05 tienda/sass/modules/_nav.scss
+++ b/01 HTML Y CSS/05 tienda/sass/modules/_nav.scss
@@ -1,4 +1,7 @@
 .nav {
+    position: fixed;
+    z-index: 1;
+    width: 100%;
     &__welcome {
         background-color: #f4f4f4;
         &__container {
@@ -28,6 +31,7 @@
         }
     }
     &__menu {
+        background-color: white;
         &__container {
             display: flex;
             align-items: center;
@@ -44,6 +48,8 @@
                 display: none;
                 @media only screen and (max-width: $bp-large){
                     display: block;
+                    z-index: 2;
+                    background-color: white;
                 }
             }
             &__right {
@@ -52,7 +58,28 @@
                 &__box {
                     display: flex;
                     @media only screen and (max-width: $bp-large){
-                        display: none;
+                        position: fixed;
+                        background-color: rgba(black, .95);
+                        left: -100%;
+                        top: 0;
+                        width: 100%;
+                        height: 100vh;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        row-gap: 1rem;
+                        z-index: 1;
+                        transition: all .3s;
+                        &.mostrar{
+                            left: 0;
+                            transition: all .3s;
+                        }
+                        &__item{
+                            &--link{
+                                color: white !important;
+                                font-size: 2.8rem !important;
+                            }
+                        }
                     }
                     &__item {
                         margin-left: 1rem;
