--- a/01 HTML Y CSS/05 tienda/sass/modules/_portada.scss
+++ b/01 HTML Y CSS/05 tienda/sass/modules/_portada.scss
@@ -1,4 +1,5 @@
 .portada {
+    padding-top: 19.738rem;
     &__top {
         position: relative;
         @media only screen and (max-width: $bp-large){
@@ -17,6 +18,7 @@
         }
         &__container {
             position: absolute;
+            // z-index: 2;
             top: 50%;
             width: 120rem;
             left: 50%;
