--- a/04 CMS/public/css/estilos.css
+++ b/04 CMS/public/css/estilos.css
@@ -385,6 +385,10 @@ ul, ol {
   }
 }
 
+.text-right {
+  text-align: right;
+}
+
 .ml-1 {
   margin-left: 1rem;
 }
@@ -423,6 +427,46 @@ ul, ol {
 
 .ml-10 {
   margin-left: 10rem;
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
+}
+
+.mt-3 {
+  margin-top: 3rem;
+}
+
+.mt-4 {
+  margin-top: 4rem;
+}
+
+.mt-5 {
+  margin-top: 5rem;
+}
+
+.mt-6 {
+  margin-top: 6rem;
+}
+
+.mt-7 {
+  margin-top: 7rem;
+}
+
+.mt-8 {
+  margin-top: 8rem;
+}
+
+.mt-9 {
+  margin-top: 9rem;
+}
+
+.mt-10 {
+  margin-top: 10rem;
 }
 
 .nav {
@@ -906,6 +950,151 @@ ul, ol {
   border-color: rgb(0, 132, 197);
   color: white;
   transition: all 0.3s;
+}
+
+.producto {
+  padding-top: 19.738rem;
+}
+.producto__container {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 5rem;
+}
+.producto__container__imgBox {
+  width: 40%;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+.producto__container__imgBox img {
+  width: 100%;
+}
+.producto__container__data {
+  width: 60%;
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+.producto__container__data__titulo {
+  font-size: 2rem;
+}
+.producto__container__data__precio {
+  color: rgb(234, 58, 60);
+  font-size: 2rem;
+  font-weight: 700;
+}
+.producto__container__data__descri {
+  color: rgb(51, 51, 51);
+  font-size: 1.4rem;
+  line-height: 2rem;
+}
+.producto__container__data__form {
+  display: flex;
+  align-items: center;
+}
+.producto__container__data__form label {
+  color: rgb(51, 51, 51);
+  font-size: 1.4rem;
+}
+.producto__container__data__form input[type=number] {
+  width: 6rem;
+  font-size: 1.4rem;
+  padding: 1rem 0 1rem 1rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+.producto__container__data__form input[type=submit] {
+  border: none;
+  border: 1px solid rgb(0, 132, 197);
+  font-size: 1.4rem;
+  background-color: white;
+  padding: 1rem 2rem;
+  color: rgb(0, 132, 197);
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.producto__container__data__form input[type=submit]:hover {
+  background-color: rgb(0, 132, 197);
+  color: white;
+  transition: all 0.3s;
+}
+
+.comentarios {
+  margin-top: 5rem;
+  padding-bottom: 5rem;
+}
+.comentarios__container__titulo {
+  color: rgb(51, 51, 51);
+  font-size: 2rem;
+  text-transform: uppercase;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+.comentarios__container__form__group:not(:last-child) {
+  margin-bottom: 1rem;
+}
+.comentarios__container__form__group textarea {
+  width: 100%;
+  font-size: 1.4rem;
+  padding: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  outline: 0;
+}
+.comentarios__container__form__group label {
+  font-size: 1.4rem;
+  margin-right: 1rem;
+}
+.comentarios__container__form__group input[type=number] {
+  font-size: 1.4rem;
+  padding: 1rem;
+}
+.comentarios__container__form__group input[type=submit] {
+  background-color: rgb(0, 132, 197);
+  border: none;
+  font-size: 1.6rem;
+  padding: 1rem 2rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  color: white;
+  outline: 0;
+}
+.comentarios__container__box {
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  padding-top: 2rem;
+  margin-top: 4rem;
+}
+.comentarios__container__box__item {
+  display: flex;
+  align-items: center;
+}
+.comentarios__container__box__item:not(:last-child) {
+  margin-bottom: 3rem;
+}
+.comentarios__container__box__item__imgBox {
+  width: 5%;
+  margin-right: 2rem;
+}
+.comentarios__container__box__item__imgBox img {
+  width: 100%;
+  border-radius: 50%;
+}
+.comentarios__container__box__item__data {
+  width: 95%;
+}
+.comentarios__container__box__item__data__top {
+  display: flex;
+  justify-content: space-between;
+}
+.comentarios__container__box__item__data__top span {
+  font-size: 1.6rem;
+  display: inline-block;
+  font-weight: 600;
+}
+.comentarios__container__box__item__data__descri {
+  font-size: 1.4rem;
+  line-height: 2rem;
+  color: rgba(0, 0, 0, 0.6);
+}
+.comentarios__container__box__item__data__stars {
+  color: #f1c40f;
+  font-size: 1.4rem;
 }
 
 /*# sourceMappingURL=estilos.css.map */
