--- a/04 CMS/public/css/estilos.css
+++ b/04 CMS/public/css/estilos.css
@@ -408,6 +408,26 @@ ul, ol {
   text-align: right;
 }
 
+.success {
+  font-size: 1.6rem;
+  background-color: rgba(26, 188, 156, 0.3);
+  color: #16a085;
+  font-weight: 600;
+  padding: 1rem;
+  border: 1px solid rgba(22, 160, 133, 0.5);
+  border-radius: 0.5rem;
+}
+
+.danger {
+  font-size: 1.6rem;
+  background-color: rgba(231, 76, 60, 0.3);
+  color: #c0392b;
+  font-weight: 600;
+  padding: 1rem;
+  border: 1px solid rgba(192, 57, 43, 0.5);
+  border-radius: 0.5rem;
+}
+
 .ml-1 {
   margin-left: 1rem;
 }
