--- a/04 CMS/public/sass/base/_constantes.scss
+++ b/04 CMS/public/sass/base/_constantes.scss
@@ -41,6 +41,26 @@ $color-secondary-ligth: rgb(102, 102, 102);
     text-align: right;
 }
 
+.success{
+    font-size: 1.6rem;
+    background-color: rgba(#1abc9c, .3);
+    color: #16a085;
+    font-weight: 600;
+    padding: 1rem;
+    border: 1px solid rgba(#16a085, .5);
+    border-radius: .5rem;
+}
+
+.danger{
+    font-size: 1.6rem;
+    background-color: rgba(#e74c3c, .3);
+    color: #c0392b;
+    font-weight: 600;
+    padding: 1rem;
+    border: 1px solid rgba(#c0392b, .5);
+    border-radius: .5rem;
+}
+
 .ml-1 {
     margin-left: 1rem;
 }
