--- a/04 CMS/public/css/estilos.css
+++ b/04 CMS/public/css/estilos.css
@@ -390,6 +390,8 @@ ul, ol {
   color: white;
   padding: 1.2rem 1.2rem 0.8rem 1.2rem;
   border-radius: 0.5rem;
+  cursor: pointer;
+  border: none;
 }
 
 .btn-warning {
@@ -402,6 +404,10 @@ ul, ol {
 
 .btn-danger {
   background-color: #e74c3c;
+}
+
+.btn-secondary {
+  background-color: rgb(51, 51, 51);
 }
 
 .text-right {
